--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Week 1: 救恩大故事排序游戏</title>
+  <title>Week 1 Updated: 救恩大故事排序游戏</title>
   <style>
     :root{
       --bg:#0b1220;
