--- a/play.html
+++ b/play.html
@@ -5,29 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Play</title>
   <link rel="stylesheet" href="styles.css" />
+  <script>
+    (function(){
+      const soundOn = (localStorage.getItem("soundOn") ?? "1") !== "0";
+      const tapMode = (localStorage.getItem("tapMode") ?? "0") === "1";
+      document.documentElement.dataset.sound = soundOn ? "1" : "0";
+      document.documentElement.dataset.tap = tapMode ? "1" : "0";
+    })();
+  </script>
 </head>
 <body>
-  <div class="header">
-  <div class="brand">
-    <div class="logo"></div>
-    <div>
-      <div style="font-weight:1000;font-size:16px;" id="headerTitle">Let’s Play</div>
-      <div style="color:var(--muted);font-weight:800;font-size:13px;">Work together and take turns</div>
+  <div class="clouds" aria-hidden="true">
+    <div class="cloud" style="top:70px; left:-260px; animation-delay:-6s; opacity:0.9;"></div>
+    <div class="cloud" style="top:160px; left:-260px; width:260px; height:86px; animation-delay:-14s; opacity:0.75;"></div>
+    <div class="cloud" style="top:110px; left:-260px; width:190px; height:72px; animation-delay:-20s; opacity:0.65;"></div>
+  </div>
+
+  <div class="wrap">
+    <div class="header">
+      <div class="brand">
+        <div class="mascot">
+          <img src="assets/sheep.svg" alt="Cartoon sheep mascot" />
+        </div>
+        <div>
+          <div class="brandTitle" id="headerTitle">Let’s Play</div>
+          <div class="brandSub">Work together and take turns</div>
+        </div>
+      </div>
+
+      <div class="toggleRow">
+        <div class="toggle" title="Sound effects">
+          <span>Sound</span>
+          <div class="switch sound" id="soundSwitch" role="switch" aria-checked="true" tabindex="0"></div>
+        </div>
+        <div class="toggle" title="Bigger buttons for iPad">
+          <span>Tap mode</span>
+          <div class="switch tap" id="tapSwitch" role="switch" aria-checked="false" tabindex="0"></div>
+        </div>
+        <button class="btn" onclick="location.href='index.html'">Back</button>
+        <button class="btn btn-primary" id="restartBtn">Restart</button>
+      </div>
     </div>
-  </div>
 
-  <div style="display:flex;gap:10px;flex-wrap:wrap;">
-    <button class="btn" onclick="location.href='index.html'">Back to Library</button>
-    <button class="btn btn-primary" id="restartBtn">Restart</button>
-  </div>
-</div>
+    <h1 id="title">Loading…</h1>
+    <div class="sub" id="description"></div>
 
-<h1 id="title">Loading…</h1>
-<div class="sub" id="description"></div>
-
-<div class="panel" id="mount"></div>
-<div class="msg bad" id="error"></div>
-
+    <div class="panel" id="mount"></div>
+    <div class="msg bad" id="error"></div>
   </div>
 
   <script type="module">
@@ -36,6 +60,67 @@
     const titleEl = document.getElementById("title");
     const descEl = document.getElementById("description");
     const restartBtn = document.getElementById("restartBtn");
+    const soundSwitch = document.getElementById("soundSwitch");
+    const tapSwitch = document.getElementById("tapSwitch");
+
+    function syncSwitches(){
+      const soundOn = document.documentElement.dataset.sound !== "0";
+      const tapOn = document.documentElement.dataset.tap === "1";
+      soundSwitch.setAttribute("aria-checked", String(soundOn));
+      tapSwitch.setAttribute("aria-checked", String(tapOn));
+    }
+
+    function onSwitchKey(e, fn){
+      if(e.key === "Enter" || e.key === " "){
+        e.preventDefault();
+        fn();
+      }
+    }
+
+    function playSfx(kind){
+      if(document.documentElement.dataset.sound !== "1") return;
+      try{
+        const AudioCtx = window.AudioContext || window.webkitAudioContext;
+        const ctx = new AudioCtx();
+        const o = ctx.createOscillator();
+        const g = ctx.createGain();
+        o.type = "sine";
+        const now = ctx.currentTime;
+        const freq = kind === "pop" ? 520 : 740;
+        o.frequency.setValueAtTime(freq, now);
+
+        g.gain.setValueAtTime(0.0001, now);
+        g.gain.exponentialRampToValueAtTime(0.35, now + 0.01);
+        g.gain.exponentialRampToValueAtTime(0.0001, now + 0.14);
+
+        o.connect(g);
+        g.connect(ctx.destination);
+        o.start(now);
+        o.stop(now + 0.16);
+        o.onended = () => ctx.close();
+      }catch(_){}
+    }
+
+    function toggleSound(){
+      const next = document.documentElement.dataset.sound === "1" ? "0" : "1";
+      document.documentElement.dataset.sound = next;
+      localStorage.setItem("soundOn", next);
+      syncSwitches();
+      if(next === "1") playSfx("ding");
+    }
+
+    function toggleTap(){
+      const next = document.documentElement.dataset.tap === "1" ? "0" : "1";
+      document.documentElement.dataset.tap = next;
+      localStorage.setItem("tapMode", next);
+      syncSwitches();
+    }
+
+    soundSwitch.onclick = toggleSound;
+    tapSwitch.onclick = toggleTap;
+    soundSwitch.onkeydown = (e) => onSwitchKey(e, toggleSound);
+    tapSwitch.onkeydown = (e) => onSwitchKey(e, toggleTap);
+    syncSwitches();
 
     function getGameFile(){
       const p = new URLSearchParams(location.search);
@@ -45,7 +130,6 @@
     async function loadGameData(){
       const gameFile = getGameFile();
       if(!gameFile) throw new Error("No game selected.");
-
       const res = await fetch(`games/${gameFile}`);
       if(!res.ok) throw new Error(`Cannot load games/${gameFile}`);
       return await res.json();
@@ -56,8 +140,8 @@
         const data = await loadGameData();
         titleEl.textContent = data.title || "Game";
         descEl.textContent = data.description || "";
+        document.getElementById("headerTitle").textContent = data.title ? "Let’s Play: " + data.title : "Let’s Play";
 
-        // Choose module by type
         let mod;
         if(data.type === "reorder"){
           mod = await import("./src/reorder.js");
@@ -67,7 +151,6 @@
           throw new Error(`Unknown game type: ${data.type}`);
         }
 
-        // Mount game
         mount.innerHTML = "";
         const api = mod.mount(mount, data);
         restartBtn.onclick = () => api.restart();
